# FantaAI

./: .gitignore  README.md  TODO  config.py  main.py  pyproject.toml  result.json  result.txt
data/api_football_data_org/processed/seriea/: match_processed.csv
data/api_football_data_org/raw/seriea/: teams.json
data/api_football_data_org/raw/seriea/team_matches/: ACF_Fiorentina_matches.json  AC_Milan_matches.json  AC_Monza_matches.json  AS_Roma_matches.json  Atalanta_BC_matches.json  Bologna_FC_1909_matches.json  Cagliari_Calcio_matches.json  Como_1907_matches.json  Empoli_FC_matches.json  FC_Internazionale_Milano_matches.json  Genoa_CFC_matches.json  Hellas_Verona_FC_matches.json  Juventus_FC_matches.json  (+7 more)
data/api_football_rapid/cleaned/generics/: countries.json  seasons.json  teams_countries.json  timezone.json
data/api_football_rapid/processed/generics/: countries.csv  countries.parquet  leagues.csv  leagues.parquet  timezones.csv  timezones.parquet
data/api_football_rapid/raw/generics/: countries.json  seasons.json  teams_countries.json
notebooks/: EDA_SerieA.ipynb
src/data_preparation/: api_fetcher.py  preprocess_data.py  raw_to_intermediate.py
src/data_provider/: api_football_data_org_provider.py  api_football_rapid_provider.py  data_provider_base.py  factory.py
src/db/: database.py  populate_database.py  query_database.py
src/db/sql_scripts/: create_tables.sql  drop_tables.sql  truncate_tables.sql
src/processing/: post_processing.py  processing.py
src/scraping/: scraper.py
src/utils/: save_data_utils.py  save_utils.py  scraper_utils.py
(+199 files in other folders)
