[tool.poetry]
name = "fanta-ai"
version = "0.1.0"
description = "Sistema AI per raccomandare la formazione di fantacalcio"
authors = ["gianmadd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
logging = "^0.4.9.6"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
