[tool.poetry]
name = "fantaai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapegraphai = "^1.37.0"
google-generativeai = "^0.8.4"
langchain-google-genai = "^2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
